--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,6 @@
 /* Global Styles */
 :root {
     --midnight-blue: #2C3E50;
-    --celestial-blue: #3498DB;
     --tangerine: #E67E22;
     --dark-tangerine: #D35400;
     --emerald-green: #2ECC71;
@@ -16,7 +15,7 @@
 
 /* Base Settings */
 html, body {
-    font-size: 62.5%;
+    font-size: 62.5%; /* 1rem = 10px */
     scroll-behavior: smooth;
     box-sizing: border-box;
     height: 100%;
@@ -30,7 +29,7 @@ html, body {
 }
 
 body {
-    font-size: 1.6rem;
+    font-size: 1.6rem; /* Base font size */
     font-family: 'Merriweather', serif;
     background-color: var(--light-gray);
     color: var(--dark-gray);
@@ -59,7 +58,7 @@ h1 {
 
 h5 {
     font-size: 2rem;
-    text-transform: capitalize; /* Capitalizes modal titles */
+    text-transform: capitalize;
 }
 
 /* Form Controls */
@@ -150,7 +149,7 @@ p, .lead {
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.6rem;
     color: var(--midnight-blue);
     transition: color 0.3s ease;
 }
@@ -166,14 +165,14 @@ p, .lead {
 /* Button Styles */
 .btn-circle {
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0;
-    margin: 0 5px;
-    border: 1px solid var(--midnight-blue);
+    margin: 0 0.5rem;
+    border: 0.1rem solid var(--midnight-blue);
     background-color: transparent;
     color: var(--midnight-blue);
     cursor: pointer;
@@ -210,6 +209,7 @@ p, .lead {
 .btn-edit {
     background-color: var(--emerald-green);
     color: #FFFFFF !important;
+    margin: 0.5rem;
 }
 
 .btn-edit:hover {
@@ -219,6 +219,7 @@ p, .lead {
 .btn-delete {
     background-color: var(--danger-red);
     color: #FFFFFF !important;
+    margin: 0.5rem;
 }
 
 .btn-delete:hover {
@@ -226,6 +227,7 @@ p, .lead {
 }
 
 .btn-secondary {
+    margin: 0.5rem;
     margin-bottom: 2rem;
     background-color: var(--tangerine);
     color: #FFFFFF !important;
@@ -243,7 +245,7 @@ p, .lead {
     border-radius: 1rem;
     box-shadow: 0 0.4rem 1.2rem var(--card-shadow);
     padding: 1.5rem;
-    width: 280px;
+    width: 28rem;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
@@ -261,11 +263,11 @@ p, .lead {
 
 .card-img-top {
     border-radius: 0.5rem;
-    height: 150px;
     width: 100%;
+    height: auto;
     object-fit: cover;
+    max-height: 15rem;
     margin-bottom: 1rem;
-    transition: transform 0.3s ease;
 }
 
 /* Center text and ensure no overflow */
@@ -283,7 +285,7 @@ p, .lead {
 }
 
 .card-footer {
-    padding: .75rem 1.25rem;
+    padding: 0.75rem 1.25rem;
     background-color: transparent !important;
     border-top: none !important;
 }
@@ -294,13 +296,13 @@ p, .lead {
 }
 
 .modal-header {
-    justify-content: center; /* Centers the modal title */
+    justify-content: center;
 }
 
 .modal-title {
     font-size: 2rem;
     font-weight: bold;
-    text-transform: capitalize; /* Ensures title starts with a capital letter */
+    text-transform: capitalize;
 }
 
 .modal-body {
@@ -312,19 +314,19 @@ p, .lead {
 .modal-body .modal-image img {
     border-radius: 0.5rem;
     max-width: 100%;
-    max-height: 250px; /* Keeps the image a manageable size */
+    max-height: 25rem;
     object-fit: cover;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .modal-body .modal-text {
-    overflow-y: auto; /* Enables vertical scrolling */
-    overflow-x: hidden; /* Prevents horizontal scrolling */
-    max-height: 300px; /* Ensures the content does not exceed modal height */
-    padding: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 30rem;
+    padding: 1rem;
     width: 100%;
     text-align: left;
-    white-space: normal; /* Allows the text to wrap properly */
+    white-space: normal;
 }
 
 /* Footer */
@@ -412,7 +414,7 @@ footer .social-links li a:hover {
     .card {
         margin-bottom: 1rem;
         width: 100%;
-        max-width: 250px;
+        max-width: 25rem;
     }
 
     .col-md-6 {
@@ -484,18 +486,18 @@ footer .social-links li a:hover {
 
     .card {
         margin-bottom: 1rem;
-        width: 100%; /* Full width on extra small screens */
-        max-width: 300px; /* Set a max width for better control */
+        width: 100%;
+        max-width: 30rem;
     }
 
     .col-sm-6 {
-        flex: 0 0 100%; /* Ensure cards take full width on extra small screens */
+        flex: 0 0 100%;
         max-width: 100%;
         display: flex;
-        justify-content: center; /* Center cards horizontally */
+        justify-content: center;
     }
 
     .row {
-        justify-content: center; /* Center row content on small screens */
+        justify-content: center;
     }
 }
