--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -54,9 +54,7 @@
                                 <div class="modal-body">
                                     <div class="text-center mb-3">
                                         {% if entry.image_file %}
-                                            <img src="{{ url_for('static', filename='images/' ~ entry.image_file) }}" 
-                                                 alt="{{ entry.title }}" 
-                                                 class="img-fluid" style="max-height: 250px; object-fit: cover; border-radius: 8px;">
+                                        <img src="{{ url_for('static', filename='images/' ~ entry.image_file) }}" alt="{{ entry.title }}" class="card-img-top">
                                         {% endif %}
                                     </div>
                                     <div class="modal-text" style="max-height: 300px; overflow-y: auto; padding: 10px; width: 100%;">
