--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,10 +50,10 @@
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <ul class="social-links list-inline">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a></li>
                     </ul>
                 </div>
             </div>
